# client-info

./: Cargo.toml  LICENSE  README.md
src/: main.rs
templates/: index.html  style.html
