[package]
name = "client-info"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
clap = { version = "3.0", features = ["derive"]}
log = "0.4.0"
env_logger = "0.8.4"
askama = "0.11.0"
serde = "1"

[profile.production]
inherits = "release"
lto = true
codegen-units = 1
